// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/alert/demo/banner.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <br />
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Very long warning text warning text text text text text text text
    </span>
    <span
      class="ant-alert-description"
    />
    <a
      class="ant-alert-close-icon"
    />
  </div>
  <br />
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon ant-alert-banner"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning text without icon
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <br />
  <div
    class="ant-alert ant-alert-error ant-alert-banner"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
</div>
`;

exports[`renders ./components/alert/demo/basic.md correctly 1`] = `
<div
  class="ant-alert ant-alert-success ant-alert-no-icon"
  data-show="true"
>
  <span
    class="ant-alert-message"
  >
    Success Text
  </span>
  <span
    class="ant-alert-description"
  />
</div>
`;

exports[`renders ./components/alert/demo/closable.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
    </span>
    <span
      class="ant-alert-description"
    />
    <a
      class="ant-alert-close-icon"
    />
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error Text
    </span>
    <span
      class="ant-alert-description"
    >
      Error Description Error Description Error Description Error Description Error Description Error Description
    </span>
    <a
      class="ant-alert-close-icon"
    />
  </div>
</div>
`;

exports[`renders ./components/alert/demo/close-text.md correctly 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon"
  data-show="true"
>
  <span
    class="ant-alert-message"
  >
    Info Text
  </span>
  <span
    class="ant-alert-description"
  />
  <a
    class="ant-alert-close-icon"
  >
    Close Now
  </a>
</div>
`;

exports[`renders ./components/alert/demo/description.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Success Text
    </span>
    <span
      class="ant-alert-description"
    >
      Success Description Success Description Success Description
    </span>
  </div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Info Text
    </span>
    <span
      class="ant-alert-description"
    >
      Info Description Info Description Info Description Info Description
    </span>
  </div>
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning Text
    </span>
    <span
      class="ant-alert-description"
    >
      Warning Description Warning Description Warning Description Warning Description
    </span>
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error Text
    </span>
    <span
      class="ant-alert-description"
    >
      Error Description Error Description Error Description Error Description
    </span>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/icon.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Success Tips
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-info"
    data-show="true"
  >
    <svg
      class="anticon ant-alert-icon"
      data-icon="info-circle"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm32 588c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z"
        fill="none"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <circle
        cx="512"
        cy="336"
        r="48"
      />
      <path
        d="M536 448h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
    <span
      class="ant-alert-message"
    >
      Informational Notes
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-warning"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-error"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-success ant-alert-with-description"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Success Tips
    </span>
    <span
      class="ant-alert-description"
    >
      Detailed description and advices about successful copywriting.
    </span>
  </div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Informational Notes
    </span>
    <span
      class="ant-alert-description"
    >
      Additional description and informations about copywriting.
    </span>
  </div>
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning
    </span>
    <span
      class="ant-alert-description"
    >
      This is a warning notice about copywriting.
    </span>
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error
    </span>
    <span
      class="ant-alert-description"
    >
      This is an error message about copywriting.
    </span>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/smooth-closed.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Alert Message Text
    </span>
    <span
      class="ant-alert-description"
    />
    <a
      class="ant-alert-close-icon"
    />
  </div>
  <p>
    placeholder text here
  </p>
</div>
`;

exports[`renders ./components/alert/demo/style.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Success Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-info ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Info Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Warning Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert ant-alert-error ant-alert-no-icon"
    data-show="true"
  >
    <span
      class="ant-alert-message"
    >
      Error Text
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
</div>
`;
